--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,8 +39,25 @@ a {
   animation: blinker 1s ease-in-out infinite;
 }
 
+.rotate {
+  animation: rotate 1.3s linear infinite;
+  transform-origin: center -8px;
+}
+
+.transparent {
+  opacity: 0;
+}
+
 @keyframes blinker {
   from { color: black; }
   50% { color: red; }
   to { color: black; }
+}
+
+@keyframes rotate {
+  from { transform: rotate(0deg); }
+  25% { transform: rotate(90deg); }
+  50% { transform: rotate(180deg); }
+  75% { transform: rotate(270deg); }
+  to { transform: rotate(360deg); }
 }
