--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,9 +44,14 @@ a {
   transform-origin: center -8px;
 }
 
-.transparent {
-  opacity: 0;
+.fade-in {
+  animation: fade-in 2s linear;
 }
+
+.fade-out {
+  animation: fade-out 2s linear;
+}
+
 
 @keyframes blinker {
   from { color: black; }
@@ -54,10 +59,17 @@ a {
   to { color: black; }
 }
 
+@keyframes fade-out {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+
+@keyframes fade-in {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
 @keyframes rotate {
   from { transform: rotate(0deg); }
-  25% { transform: rotate(90deg); }
-  50% { transform: rotate(180deg); }
-  75% { transform: rotate(270deg); }
   to { transform: rotate(360deg); }
 }
