--- a/sass/result.scss
+++ b/sass/result.scss
@@ -15,6 +15,7 @@
   }
 
   .stats {
+    margin: 0;
     justify-content: flex-end;
   }
 }
@@ -40,6 +41,3 @@
     @include bold-text;
   }
 }
-
-
-
