--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,6 +29,19 @@ a {
   color: $main-font-color;
 }
 
+.error {
+  width: 180px;
+  position: absolute;
+  top: 50px;
+  left: calc(50% - 90px);
+  z-index: 20;
+  padding: 20px;
+  border-radius: 20px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: red;
+}
+
 .back {
   border: 0;
   background-color: transparent;
