--- a/sass/game.scss
+++ b/sass/game.scss
@@ -36,6 +36,7 @@
 }
 
 .game__option {
+  display: flex;
   position: relative;
   border: 10px solid transparent;
 
@@ -45,6 +46,10 @@
 
   text-align: center;
   vertical-align: middle;
+
+  img {
+    margin: auto;
+  }
 }
 
 .game__answer input {
