--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,16 +30,16 @@ a {
 }
 
 .error {
-  width: 180px;
+  width: 250px;
   position: absolute;
-  top: 50px;
+  top: 100px;
   left: calc(50% - 90px);
   z-index: 20;
   padding: 20px;
   border-radius: 20px;
   margin: 0 auto;
   text-align: center;
-  background-color: red;
+  background-color: #de1f1f;
 }
 
 .back {
